# ai-document-assistant

./: .env  .gitignore  README.md  enterprise.db  main.py  pyproject.toml  test_gemini.py
app/: database.py  models.py  schemas.py
app/api/: ai.py  documents.py
app/core/: config.py
app/database/: models.py
app/services/: ai_service.py  pdf_service.py  text_extraction_service.py
app/web/: ai.py  documents.py
static/css/: main.css
templates/: document.html  error.html  home.html  layout.html
uploads/: 70f7e5d3-460b-48b6-906a-1514f70d6744.txt  876dfcc6-199a-4d71-8ef4-fc3b7454f821.docx
